infrastructure/configs/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  name: internal
#  namespace: gateway
#  #annotations:
#  #  cert-manager.io/cluster-issuer: letsencrypt-production
#spec:
#  gatewayClassName: cilium
#  #infrastructure:
#  #  annotations:
#  #    io.cilium/lb-ipam-ips: 10.10.21.11
#  listeners:
#    - protocol: HTTP
#      port: 80
#      name: http-apps-gateway
#      hostname: "*.apps.int.scarey.me"
#      allowedRoutes:
#        namespaces:
#          from: All
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - name: apps-int-scarey-me-tls

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: GatewayClass
#metadata:
#  name: external
#spec:
#  controllerName: io.cilium/gateway-controller
#  description: External GatewayClass
#  parametersRef:
#    group: cilium.io
#    kind: CiliumGatewayClassConfig
#    name: external
#    namespace: gateway
#---
#apiVersion: cilium.io/v2alpha1
#kind: CiliumGatewayClassConfig
#metadata:
#  name: external
#  namespace: gateway
#spec:
#  service:
#    type: NodePort

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: ash
  #    io.cilium/lb-ipam-ips: 10.10.21.12
  listeners:
    - protocol: HTTP
      port: 80
      name: http-apps-gateway
      hostname: "*.scarey.me"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "scarey.me"
      allowedRoutes:
        namespaces:
          from: All
